autotools: try to fix the built sources error (take 4)
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -217,6 +217,7 @@ syd_SOURCES= \
 		 syscall.c \
 		 config.c \
 		 sydbox.c
+sydbox.$(OBJEXT): $(BUILT_SOURCES)
 syd_format_SOURCES= \
 		syd-format.c
 
