--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -217,7 +217,7 @@ syd_SOURCES= \
 		 syscall.c \
 		 config.c \
 		 sydbox.c
-sydbox.$(OBJEXT): $(BUILT_SOURCES)
+syd-pink.$(OBJEXT): $(BUILT_SOURCES)
 syd_format_SOURCES= \
 		syd-format.c
 
