Cargo: Drop --frozen from cargo flags
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,7 +12,7 @@ CARGO_VERBOSE = $(cargo_verbose_$(V))
 cargo_verbose_ = $(cargo_verbose_$(AM_DEFAULT_VERBOSITY))
 cargo_verbose_0 =
 cargo_verbose_1 = --verbose
-CARGO_FLAGS= --frozen $(CARGO_VERBOSE)
+CARGO_FLAGS= $(CARGO_VERBOSE)
 if SYDBOX_CARGO_RELEASE
 CARGO_FLAGS= --$(SYDBOX_CARGO_RELEASE_TYPE)
 endif
@@ -22,7 +22,7 @@ check-local:
 clean-local:
 	CARGO_TARGET_DIR=sydbox_rs $(CARGO) clean
 install-exec-local:
-	CARGO_TARGET_DIR=sydbox_rs $(CARGO) install --path=. --root="$(DESTDIR)/usr" --frozen
+	CARGO_TARGET_DIR=sydbox_rs $(CARGO) install --path=. --root="$(DESTDIR)/usr"
 	rm -f $(DESTDIR)/usr/.crates.toml
 	rm -f $(DESTDIR)/usr/.crates2.json
 
