--- a/src/lib.rs.in
+++ b/src/lib.rs.in
@@ -13,9 +13,11 @@
 #![allow(non_camel_case_types)]
 #![allow(non_snake_case)]
 
+/*
 macro_rules! say { ($s:expr, $($rest:tt)*) => {
     eprintln!(concat!("[0;1;31;91msydb☮x: ", $s, "[0m"), $($rest)*) }; ($s:expr) => {
         eprintln!(concat!("[0;1;31;91msydb☮x: ", $s, "[0m")) }; }
+*/
 
 extern crate libc;
 extern crate unshare;
@@ -67,7 +69,7 @@ pub extern "C" fn syd_execv(
     argv: *const *const c_char,
     alias: *const c_char,
     workdir: *const c_char,
-    verbose: bool,
+    _verbose: bool,
     uid: u32,
     gid: u32,
     chroot: *const c_char,
@@ -234,9 +236,11 @@ pub extern "C" fn syd_execv(
         }
     }
 
+    /*
     if verbose {
         eprintln!("[0;1;31;91mSydb☮x C☮mmand: {:?}[0m", cmd);
     }
+    */
 
     let mut child = match cmd.spawn() {
         Ok(child) => child,
@@ -247,9 +251,11 @@ pub extern "C" fn syd_execv(
     };
 
     let pid = nix::unistd::Pid::from_raw(child.id().try_into().unwrap());
+    /*
     if verbose {
         eprintln!("[0;1;31;91mSydb☮x Child pid: {}[0m", pid);
     }
+    */
 
     if escape_stdout {
         let mut buf = Vec::new();
