autotools: fix another built source issue
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -310,7 +310,8 @@ BUILT_SOURCES= \
 	syscall_open_ro.lst \
 	syscall_open_syd.h \
 	sydbox_rs.h \
-	lib.rs
+	lib.rs \
+	$(SYDBOX_RUST_LIB_STA)
 syd-syscall.$(OBJEXT): $(BUILT_SOURCES)
 
 ###
