Revert "autotools: fix another built source issue"
This reverts commit 430909cf0dbf4bc35dfb129b5725c2ea5541fc4d.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -310,8 +310,7 @@ BUILT_SOURCES= \
 	syscall_open_ro.lst \
 	syscall_open_syd.h \
 	sydbox_rs.h \
-	lib.rs \
-	$(SYDBOX_RUST_LIB_STA)
+	lib.rs
 syd-syscall.$(OBJEXT): $(BUILT_SOURCES)
 
 ###
