autotools: fix another built source issue (take 2)
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -168,6 +168,7 @@ syd_HEADERS= \
 		 sydconf.h \
 		 sydbox.h
 syd_SOURCES= \
+		 $(SYDBOX_RUST_LIB_STA) \
 		 lib.rs \
 		 sydbox_rs.h \
 		 syscall_open_syd.h \
