autotools: fix another built source issue (take 3)
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -314,6 +314,7 @@ BUILT_SOURCES= \
 	lib.rs \
 	$(SYDBOX_RUST_LIB_STA)
 syd-syscall.$(OBJEXT): $(BUILT_SOURCES)
+syd-dump.$(OBJEXT): $(BUILT_SOURCES)
 
 ###
 # Determine make -j job count to pass to cargo.
