sydb☮x,pand☮ra: change PN
s/SydBox/SydB☮x/g
s/Sydb☮x/Sydb☮x/g
s/Pandora/Pand☮ra/g

Paludis support is WIP.

☮bligat☮ry Shakespeare qu☮te,
s/o/☮/ by alïp:

☮ w☮nder!
H☮w many g☮☮dly creatures are there here!
H☮w beaute☮us mankind is! ☮ brave new w☮rld,
That has such pe☮ple in't.

— William Shakespeare, The Tempest, Act V, Scene I, ll. 203–206[

Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/.gitignore
+++ b/.gitignore
@@ -112,7 +112,7 @@ Makefile
 /man/sydfmt.html
 /man/sydbox.ent
 
-# Sydbox-1
+# Sydb☮x-1
 /src/sydbox
 /src/sydfmt
 /src/sydbox-dump
@@ -122,7 +122,7 @@ Makefile
 /t/bin-wrappers/sydbox-dump
 /t/bin-wrappers/sydfmt
 /t/bin-wrappers/shoebox
-# Sydbox-2
+# Sydb☮x-2
 /src/syd
 /src/syd-dump
 /src/syd-format
@@ -133,7 +133,7 @@ Makefile
 /t/bin-wrappers/syd-dump
 /t/bin-wrappers/syd-format
 /t/bin-wrappers/syd-shoebox
-# Sydbox-2
+# Sydb☮x-2
 
 /src/kingbee.d/*
 /src/syscall_open_ro.lst
