--- a/data/sydbox.bashrc.in
+++ b/data/sydbox.bashrc.in
@@ -1,5 +1,5 @@
 #!/bin/bash
-# Default bashrc for the SydBox shell
+# Default bashrc for the SydB☮x shell
 # Based in part upon /etc/bash/bashrc of Exherbo.
 # Copyright (c) 2021 Ali Polatel <alip@exherbo.org>
 # SPDX-License-Identifier: GPL-2.0-only
