--- a/pandora/Cargo.toml
+++ b/pandora/Cargo.toml
@@ -3,7 +3,7 @@ name = "pandora_box"
 version = "0.6.2"
 authors = ["Alï Polatel <alip@exherbo.org>"]
 edition = "2018"
-description = "Pandora's Box: A helper for SydBox, a seccomp-bpf based application sandbox, to make sandboxing practical"
+description = "Pand☮ra's Box: A helper for SydB☮x, a seccomp-bpf based application sandbox, to make sandboxing practical"
 documentation = "https://sydbox.exherbo.org"
 readme = "README"
 homepage = "https://pink.exherbo.org"
